--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.6",
@@ -35,6 +36,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
