--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.484.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.6.7",
@@ -40,6 +41,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.4",
