--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL=http://localhost:3000
+# VITE_API_BASE_URL=http://localhost:3000
+VITE_API_BASE_URL=https://lucid-rejoicing-one.up.railway.app
+
