--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # VITE_API_BASE_URL=http://localhost:3000
-VITE_API_BASE_URL=https://dimpo-pbackend-one.up.railway.app
+VITE_API_BASE_URL=https://dimbop.up.railway.app
 
