--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.3",
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-table": "^8.21.3",
@@ -43,6 +44,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
