--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-# VITE_API_BASE_URL=http://localhost:3000
-VITE_API_BASE_URL=https://dimpo-pbackend.onrender.com
+VITE_API_BASE_URL=http://localhost:8080
+
+# VITE_API_BASE_URL=https://dimpo-pbackend.onrender.com
 
