--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sonner": "^2.0.6",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.4",
@@ -62,6 +63,7 @@
     "@types/node": "^22.13.13",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "esbuild": "^0.25.9",
     "eslint": "^9.21.0",
