--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_API_BASE_URL=http://localhost:8080
+# VITE_API_BASE_URL=http://localhost:8080
+VITE_API_BASE_URL=https://dimbopbakedfiles.onrender.com
 
 # VITE_API_BASE_URL=https://dimpo-pbackend.onrender.com
 
